--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Lightweight and customizable theme handler for Solid JS",
   "author": "kifrud",
   "license": "MIT",
-  "version": "0.9.3",
+  "version": "0.9.7",
   "homepage": "https://github.com/kifrud/solid-theme-provider",
   "repository": {
     "type": "git",
@@ -18,8 +18,8 @@
     "prefers-color-scheme"
   ],
   "type": "module",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
+  "main": "dist/index.jsx",
+  "module": "dist/index.jsx",
   "types": "types/index.d.ts",
   "files": [
     "dist",
